<resources>
    <string name="app_name" translatable="false">PlanIt</string>

    <string name="adMob_appId" translatable="false">ca-app-pub-1347708863162478~9296884830</string>
    <!--<string name="adMob_bannerAd" translatable="false">ca-app-pub-1347708863162478/9146493989</string>-->
    <string name="adMob_bannerAd" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="Open" translatable="false">open</string>
    <string name="Close" translatable="false">close</string>
    <string name="transition_image" translatable="false">transition_image</string>

    <string name="near_me">Near me</string>
    <string name="my_bucket_lists">My Bucket Lists</string>
    <string name="my_calendar">My Calendar</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="lets_go">Lets Go</string>

    <string name="date_template">dd/MMM/yyyy</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="error_message">Can\'t receive data at the moment</string>
    <string name="no_connection">No Internet Connection</string>

    <string name="bucket_items_error_message">No items added in the bucket list</string>

    <string name="opening_hours">Opening Hours</string>
    <string name="open">Open</string>
    <string name="open_now">Open Now</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="reviews">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="permission_rationale">To be able to get nearby places</string>
    <string name="permission_denied_explanation">Permission is denied 1</string>
    <string name="no_location_detected">Couldn\'t find location</string>
    <string name="gps_error_message">Please Enable GPS</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="add_to_bucketList">Add to bucket list</string>



    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_buckets">No BucketLists</string>

    <string name="language_preference">key language</string>
    <string name="empty_bucketlist">Bucket list is empty</string>
    <string name="undo">UNDO</string>
    <string name="item_removed">Item was removed from the list.</string>
    <string name="bucket_list">BucketLists</string>
    <string name="no_opening_hours">No Opening hours present at the time</string>
    <string name="bucketlist_created">BucketList Created</string>
    <string name="call_permission_denied">Permission to make call was denied :(</string>
    <string name="no_buckets_created">No BucketLists Created</string>
    <string name="item_already_in_calendar">Item already added on this date</string>
    <string name="item_added_calendar">Item added to calendar</string>
    <string name="choose_bucket">Choose a BucketList</string>
    <string name="gps_not_enabled">GPS is not Enabled!</string>
    <string name="turn_on_gps">Do you want to turn on GPS?</string>
    <string name="content_descrip_pois">Image of a point of interest</string>
    <string name="serchview_hint">search for cities</string>
    <string name="enter_city">Please enter a City</string>
    <string name="create_a_new_bucketlist">create a new bucketlist</string>
</resources>
