<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">

        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
    </group>

    <group android:id="@+id/group2">

        <item android:id="@+id/near_me"
            android:title="@string/near_me"/>

        <item android:id="@+id/ar"
            android:title="@string/ar"/>
    </group>

    <group android:id="@+id/group3">

    <item android:id="@+id/my_bucket_lists"
        android:title="@string/my_bucket_lists"/>

    <item android:id="@+id/my_calendar"
        android:title="@string/my_calendar"/>
    </group>

    <group android:id="@+id/group4">

    <item android:id="@+id/settings"
        android:title="@string/settings"/>
    </group>


</menu>