<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/address_layout_margin_start"
            android:layout_marginTop="@dimen/address_layout_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_icon"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="@dimen/address_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_margin_start"
                tools:text="Jonckbloeatlaan 13J, 5615EM, Eindhoven, Netherlands"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/opening_hours_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/openinghours_layout_margin_start"
            android:layout_marginTop="@dimen/openinghours_layout_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_layout">

        <ImageView
            android:id="@+id/opening_hours_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/opening_hours_icon"
            />

        <TextView
            android:id="@+id/opening_hours_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/openinghours_title_margin_start"
            android:text="@string/opening_hours"
            android:layout_toEndOf="@+id/opening_hours_icon" />

        <TextView
            android:id="@+id/monday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_below="@+id/opening_hours_title"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        <TextView
            android:id="@+id/tuesday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:layout_below="@+id/monday_opening_hours_tv"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        <TextView
            android:id="@+id/wednesday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:layout_below="@+id/tuesday_opening_hours_tv"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        <TextView
            android:id="@+id/thursday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:layout_below="@+id/wednesday_opening_hours_tv"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        <TextView
            android:id="@+id/friday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_below="@+id/thursday_opening_hours_tv"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        <TextView
            android:id="@+id/saturday_opening_hours_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:layout_below="@+id/friday_opening_hours_tv"
            android:layout_marginTop="@dimen/days_margin_top"
            android:layout_marginStart="@dimen/days_margin_start" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:layout_marginStart="@dimen/reviews_tv_margin_start"
            android:layout_marginTop="@dimen/reviews_tv_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opening_hours_layout"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviews_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reviews_rv_height"
            android:layout_marginTop="@dimen/reviews_rv_margin_top"
            android:layout_marginStart="@dimen/reviews_rv_margin_start"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/reviews_tv"
            />

        <com.leinardi.android.speeddial.SpeedDialView
            android:id="@+id/speedDial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            app:sdMainFabClosedSrc="@drawable/ic_add_white_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>