<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/simpleSearchView"
            android:layout_width="361dp"
            android:layout_height="39dp"
            android:layout_marginStart="@dimen/search_view_margin_start_end"
            android:layout_marginTop="@dimen/search_view_margin_top"
            android:layout_marginEnd="@dimen/search_view_margin_start_end"
            android:background="@drawable/searchview_rounded"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/constraint_horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/departure_date_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="@dimen/departure_arrival_date_tv_top_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/arrival_date_layout"
            app:layout_constraintHorizontal_bias="@dimen/constraint_horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleSearchView"
            android:onClick="departureLayoutClicked">

            <TextView
                android:id="@+id/departure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_date" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/calendar" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/arrival_date_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/departure_arrival_date_tv_top_margin"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/departure_date_layout"
            app:layout_constraintTop_toBottomOf="@+id/simpleSearchView">

            <TextView
                android:id="@+id/arrival_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/arrival_date" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/calendar" />

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="@dimen/search_view_and_button_width"
            android:layout_height="@dimen/search_view_and_button_height"
            android:layout_marginTop="80dp"
            android:bottomLeftRadius="@dimen/button_corner_radius"
            android:bottomRightRadius="@dimen/button_corner_radius"
            android:text="@string/lets_go"
            android:textColor="@android:color/black"
            android:topLeftRadius="@dimen/button_corner_radius"
            android:topRightRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleSearchView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>